# quantdome

./: .gitignore  CONTRIBUTING.md  README.md  data_handler.py  data_microservice.py  delete_topics.py  docker-compose.yml  events.md  example.py  execution_microservice.py  kafka-portfolio.py  kafka_portfolio.py  kafka_strategy.py  microservice_data.py  microservice_execution.py  microservice_portfolio.py  microservice_strategy.py  pyproject.toml  requirements.txt  setup.py  start.sh  stop.sh
config_kafka/: default.ini
config_sys/: default.ini
docs/: events.md  output.md  strategy.md
historical_csv/: GOOG_test.csv
main/: README.md  README_depricated.md
main/data/: AAPL.csv  GOOG_test.csv
main/docs/: architecture.md
main/quantdome/: event.py  helpers.py  portfolio.py  quantdome.py  strategy.py
main/strategies/: Sample.py  SimpleAppleStrat.py
main/tests/: alpaca.py  quantdome.py  test_event.py  test_simulatedExecutionhandler.py
main/utils/: db_funcs.py
quantdome/: alpaca.py  backtest_CLI.py  data.py  event.py  execution.py  kafka-data.py  livealpaca.py  portfolio.py  quantdome.py
scripts/: alpaca_data_loader.py  data_loader.py
strategies/: BuyAndHoldStrategy.py  simple_strat.py  strategy.py
tests/: alpaca.py  test_alpaca.py  test_data_handler.py  test_event.py  test_execution.py  test_historicCSVDataHandler.py  test_live.py  test_liveHandler.py  test_mysql_db.py  test_naive_portfolio.py  test_portfolio.py  test_simple_strategy.py  test_simulatedExecutionhandler.py  test_strategy_handler.py
utils/: __init__.py  alpaca_data_loader.py  events.py
(+6 files in other folders)
